# erpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/erpy/: __init__.py
src/term/: basetypes.py  codec.py
tests/: test_etf_decode.py  test_etf_encode.py
